Fix URL of CMIF file

--- a/CorrespSearch/csv2cmi.ini
+++ b/CorrespSearch/csv2cmi.ini
@@ -2,7 +2,7 @@
 title = Die Korrespondenz der Constance de Salm (1767-1845)
 editor = Hippolyte Souvay
 publisher = Deutsches Historisches Institut Paris
-fileURL = https://constance-de-salm.de
+fileURL = https://raw.githubusercontent.com/dhi-digital-humanities/constance-de-salm/main/CorrespSearch/CdsCMIF.xml
 extra-delimiter = |
 
 # If the metadata is compiled from a single edition
